spacing fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,6 @@
 body {
     background-color: #f8ebeb;
-    margin: o auto;
-    max-width: 1600px;}
+    margin: 0}
 
 h1, h2, h3, h4, h5 {
     font-family: "Papyrus", "Courier New", Helvetica, sans-serif;}
@@ -88,6 +87,8 @@ footer img {
     width: 50px;}
 
 header img {
+    display: block;
+    align-content: center;
     width: 80px;
     margin: auto;}
 
@@ -116,4 +117,4 @@ footer a{
     grid-column: 2/3;
     grid-row: 1/3;
     position: relative;
-    transform: translate(-10%, 15%);}
+    transform: translate(-1%, 15%);}
